kubernetes/app/magento.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magento-web
  namespace: magento
  labels:
    app: magento
    tier: frontend
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: magento
      tier: frontend
  template:
    metadata:
      labels:
        app: magento
        tier: frontend
    spec:
      containers:
        - name: magento
          image: ghcr.io/alexcheng1982/docker-magento2:2.4.6-p3
          ports:
            - containerPort: 80
              name: http
            - containerPort: 443
              name: https
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1280Mi"
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 120
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 6
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          volumeMounts:
            - name: magento-app-etc
              mountPath: /var/www/html/app/etc
            - name: magento-media
              mountPath: /var/www/html/pub/media
      volumes:
        - name: magento-app-etc
          persistentVolumeClaim:
            claimName: magento-app-etc-pvc
        - name: magento-media
          persistentVolumeClaim:
            claimName: magento-media-pvc
