kubernetes/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: magento-web
  namespace: magento
  labels:
    app: magento
    tier: frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: http
    - port: 443
      targetPort: 443
      name: https
  selector:
    app: magento
    tier: frontend
