kubernetes/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: magento-ingress
  namespace: magento
  labels:
    app: magento
    tier: frontend
  annotations:
    # Timeout rules
    nginx.ingress.kubernetes.io/proxy-body-size: "64m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  ingressClassName: nginx
  rules:
    # Ingress routing
    - host: "gadgetbekassidoarjo.my.id"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: magento-web
                port:
                  number: 80
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: magento-web
                port:
                  number: 80
